[tool.poetry]
name = "uncle-sum"
version = "0.1.0"
description = ""
authors = ["yutatanamoto <yuta.tanamoto@zozo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
medium-api = "^0.5.4"
openai = "^0.28.1"
slack-sdk = "^3.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
